--- a/app/src/main/res/layout/activity_new_element_to_do.xml
+++ b/app/src/main/res/layout/activity_new_element_to_do.xml
@@ -7,6 +7,7 @@
     tools:context="com.example.kacper.secondapp.NewElementToDoActivity">
 
     <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
