--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,6 +5,9 @@
     <item android:id="@+id/addNewToDo"
         android:icon="@drawable/ic_stat_name"
         android:title="Add new to do" />
+    <item android:id="@+id/deleteDone"
+        android:icon="@drawable/ic_stat_name"
+        android:title="Delete" />
 
 
 </menu>
